# magni_gazebo

./: CMakeLists.txt  package.xml
launch/: empty_world.launch  followme_test.launch  magni.launch  robots.launch
src/: get_state.py  publish_img.cpp  publish_img.py  subscribe_img.py
worlds/: clearpath_playpen.world  follow_me.world  follow_me2.world  follow_me3.world
